fix button alignment, add nav bar, need to fix nav bar alignment

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,29 @@ body {
     border: none;
     margin: none;
 }
+nav {
+    width: 100%;
+    height 80px;
+}
+nav ul {
+    margin-left: 5px;
+    font-size: 12pt;
+}
+
+nav ul li{
+    list-style-type: none;
+    display: inline;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: black;
+}
+
+nav ul li a: hover{
+    border-bottom-style: solid;
+    border-bottom-color: black;
+}
 .center {
     display: block;
     margin-left: auto;
@@ -11,8 +34,8 @@ body {
 input[type=text] {
     border-radius: 20px;
     border: solid #dcdcdd;
-    width: 40%;
-    height: 35px;
+    width: 60%;
+    height: 45px;
     font-size: 16pt;
     background-image: url('Pics/voice-search-icon.png');
     display: block;
@@ -26,12 +49,12 @@ button {
     border-radius: 4px;
     display: inline-block;
     padding: 15px 18px;
-    margin: 30px 6px;
+    margin: 35px 6px;
     border: none;
     text-align: center;
     font-size: 14pt;
 }
 
 .button-alignment {
-    margin-left: 100px;
+    margin-left: 275px;
 }
